# guru

./: .dockerignore  .gitignore  AI_Teaching_System_Technical_Guide.docx  Makefile  README.md  docker-compose.yml  pyproject.toml  v0_spec.docx
backend/: migrate.py  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  queue.py  worker.py
backend/app/prompts/: chat.py  lesson.py  quiz.py
backend/app/routers/: auth.py  chat.py  flashcards.py  lessons.py  materials.py  profile.py  quiz.py  stats.py
backend/app/services/: citations.py  embedding.py  flashcards.py  grading.py  ingestion.py  llm.py  mastery.py  retrieval.py  storage.py  vision.py
backend/migrations/: 001_extensions.sql  002_schema.sql  003_add_chunk_ids.sql  004_multi_material_sessions.sql  005_mastery.sql  006_sub_documents.sql  007_chunk_type.sql  008_flashcards.sql  009_citations.sql
docs/: v02.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.jsx  CitedMessage.jsx
frontend/src/pages/: DashboardPage.jsx  FlashcardsPage.jsx  LandingPage.jsx  LibraryPage.jsx  LoginPage.jsx  NewSessionPage.jsx  OnboardingPage.jsx  SessionsPage.jsx  StatsPage.jsx  StudyPage.jsx  WikiPage.jsx
frontend/src/utils/: sanitize.ts
