[project]
name = "guru"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "boto3>=1.42.64",
    "docling>=2.77.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "openai>=2.26.0",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=5.3.1",
    "uvicorn[standard]>=0.41.0",
    "voyageai>=0.3.7",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]
